--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdx-js/react": "^3.1.0",
+    "@radix-ui/react-slider": "^1.3.5",
     "gray-matter": "^4.0.3",
     "next": "15.3.4",
     "next-mdx-remote": "^5.0.0",
