--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdx-js/react": "^3.1.0",
     "@radix-ui/react-slider": "^1.3.5",
+    "@radix-ui/react-toggle-group": "^1.1.10",
     "gray-matter": "^4.0.3",
     "next": "15.3.4",
     "next-mdx-remote": "^5.0.0",
