--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "gray-matter": "^4.0.3",
+    "motion": "^12.23.12",
     "next": "15.3.4",
     "next-mdx-remote": "^5.0.0",
     "react": "^19.0.0",
