added text special effects chromatic aberration component, also scrambler package

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "15.3.4",
     "next-mdx-remote": "^5.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "use-scramble": "^2.2.15"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
